Fix for test-loader scrolling on IPHONE.

--- a/index.css
+++ b/index.css
@@ -5,10 +5,9 @@ body {
   height: 100vh;
   margin: 0;
   color: white;
-  overflow: hidden;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   position: relative;
   background-color: #000;
