--- a/test-loader.css
+++ b/test-loader.css
@@ -8,16 +8,9 @@ body {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   position: relative;
   background-color: #000;
-  scrollbar-width: none; /* Firefox */
-  -ms-overflow-style: none; /* IE 10+ */
-}
-
-body::-webkit-scrollbar {
-  display: none; /* Chrome, Safari, Opera */
 }
 
 .video-background {
